# metta-nl-corpus

./: .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.claude/: rules.md
.claude/commands/: annotate-openai.md  annotate.md  ask.md  metta.md  ontology.md  pln.md  push-dataset.md  review.md  subprompt.md
.github/workflows/: ci.yml
datasets/: hypotheses.jsonl  premises.jsonl
documentation/: annotation_guideline.md
documentation/prompts/: default.md  v2_universal.md
metta_nl_corpus/: __init__.py  constants.py  http_server.py  mcp_server.py
metta_nl_corpus/lib/: caching.py  data_source.py  embeddings.py  helpers.py  interfaces.py  io.py  pipeline_config.py  runner.py  space_versioning.py  storage.py
metta_nl_corpus/models/: __init__.py  models.py
metta_nl_corpus/services/: definitions.py  pipeline_executor.py
metta_nl_corpus/services/defs/: __init__.py
metta_nl_corpus/services/defs/cleaning/: assets.py
metta_nl_corpus/services/defs/ingestion/: assets.py
metta_nl_corpus/services/defs/transformation/: assets.py
metta_nl_corpus/services/spaces/: contradictions.metta  inference-example.metta  inference-petta.metta  inference-tv-example.metta  inference.metta  non-contradiction.metta
tests/: __init__.py  test_inference_engine.py  test_inference_petta.py  test_parse_metta_expression.py  test_pydantic_ai_agent.py  test_runner.py  test_storage_query.py
